--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,12 @@
 \begin{abstract}
 
+The data dissemination model used in Pull-based systems utilizes the performance and enriches the scalability of P2P streaming overlay's size given the tight delay in-tolerance constraints.
+Nevertheless, a lot of research has been conducted that highlights the susceptibility of such systems to a diverse set of attacks due to the absence/inapplicability of a central/trusted authority to track the content of both, the buffer-maps and the actual exchanged video chunks.
 
+In this work, we address the threat of attacking the closest nodes to the source and thus, causing a severe discontinuity of the stream.
+In such attack, we show in our simulation studies that a very small budget is sufficient to fully intercept the video chunks before the dissemination process between peers starts.
 
-
+We propose a detection mechanism that, with high accuracy, isolates the detected malicious peers and thus, allows for a speedy recovery of the stream.
+Through both a theoretical and a simulation-based analysis, we validate that the detection mechanism is able to correctly detect malicious peers with up to x\% while inducing a small overhead of y\%.
 
 \end{abstract}
