--- a/attack.tex
+++ b/attack.tex
@@ -1,22 +1,39 @@
 \section{Internal Attack Model}
 \label{sec:Attack}
 
-Here I briefly describe how the internal attack's works.
-Assume an attacker with budget $x$ is capable of joining the overlay as early as possible and thus, assigns a fraction $Hx$, where $H\in [0,1]$, of its resources as headnodes.
-The remaining malicious peers $MN=x-Hx$ are assigned as neighbors to the $Hx$ malicious headnodes, i.e., those peers are not headnodes, they are connected as neighbors to the malicious headnodes. 
+In this section, we describe the details of launching an internal attack on a streaming P2P overlay that targets intercepting video chunks from the source. 
+% We consider an attack that is not specific to a certain streaming P2P data dissemination technique, i.e., hybrid, push or pull-based.
+First, the attack's target, budget and malicious peers' placement are discussed. Afterwards, the different adversarial behaviors that can be applied by a malicious peer once a video chunk is intercepted are detailed.
 
-Once a malicious peer $m\in M$ receives a video-chunk from the source or even through another benign peer $b \in B$, $m$ drops the packet. 
-Simultaneously, $m$ keeps on sending fake buffer-maps $BM$ to other benign peers claiming that it has those video chunks already. 
-This is the current status of the attack. Other adversarial behaviors are also possible to be included, if needed.
+\subsection{Target, budget \& placement}
 
-For the proposed attack, malicious peers are also characterized by the following:
-\begin{enumerate}
- \item Malicious peers maintain another list (other than the normal neighbor list) containing information about all other malicious peers and their status (active, suspected or evicted).
- \item They are aware of the SWAP process. 
- Hence, they fully collude in the sense that they inform each other about what and when to nominate each other to another benign peers or even to the source (if needed).
- \item Concerning SWAP, they are capable of dropping or even manipulating the number of hops in the nomination requests. Accordingly, they can prevent the source from getting benign nominations.
- \item They do NOT churn out, i.e., malicious peers can exploit the source/ benign peers' neighbor list for the whole simulation.
-\end{enumerate}
+The target of the internal attack is to severely degrade the user's experience by cutting out the stream from the source before being available for dissemination between benign peers.
+Accordingly, the attacker aims at placing malicious peers $m\in M$ in the source's neighbor list.
+Note that in a real streaming system, the typical size of the source's neighbor list is 30-40 entry [ref8, ref9], which highlights the feasibility of conducting the internal attack using a very small budget.
+
+
+Assume an attacker with budget $x$ is capable of joining the overlay as early as possible, for example, a pre-announced time for a streamline or via taking down the source's benign headnodes.
+The attacker assigns a fraction $\eta x$, where $\eta\in [0,1]$, of its resources as headnodes.
+The remaining malicious peers $MN=x-\eta x$ are assigned as neighbors to the $\eta x$ malicious headnodes, i.e., those peers are not headnodes, they are connected as neighbors to the malicious headnodes.
+In this manner, $MN$ can be also used even if SWAP \cite{nguyen2016swap} mechanism is executed, i.e., malicious peers keep on advertising $MN$ to the source for swapping.
+Thus, even if the attacker is not able to directly place malicious peers as the source's neighbors, having a higher budget to occupy the headnodes' neighbor lists also results on a complete shut down of the stream from the rest of the overlay.
+
+\subsection{Adversarial behaviors}
+Here we discuss three basic adversarial behaviors that are executed either with a certain probability or independently according to the attacker's budget and the risk of being detected.
+In Section~\ref{sec:eval}, we provide a simulation study with the impact of different attack scenarios.
+
+\subsubsection*{Dropping behavior}
+Once a malicious peer $m$ receives a video-chunk from the source or even through another head-node, $m$ drops the packet. 
+Hence, $m$ never advertises for those chunks and instead, keeps on requesting the dropped chunks from other benign peers $b \in B$.
+
+\subsubsection*{Manipulating behavior}
+In a manipulating behavior, $m$ sends its updated $BM$ to $b$.
+Although having the actual video chunks $m$ advertised for, $m$ never sends those video chunks once requested from $b$.
+
+\subsubsection*{Outdated time stamps behavior}
+In this behavior, $m$ simply advertises for the chunks in its $BM$. 
+However, $m$ only sends those chunks to any requesting peer when they are outdated.
+This technique is mainly used by the attacker to lower the risk of being detected, unlike the manipulating behavior.
 
 
 
