--- a/introduction.tex
+++ b/introduction.tex
@@ -27,7 +27,7 @@ Second, we propose a detection mechanism as a countermeasure against various adv
 
 Our mechanism aims at detection malicious behaviors in a fast, low overhead approach while considering the case where the attacker can fully occupy the source's neighbor list with malicious headnodes.
 In details, peers are able to trigger a request to their neighbors once (a) a peer is, with evidence, performing maliciously, or (b) generally, the stream satisfaction (the user's experience) of a peer drops below a given application threshold.
-Once proven malicious, a peer fires a complain, on behalf of all other participants in the detection process, to the source to remove the detected peer from it's neighbor list,
+Once proven malicious, a peer fires a complaint, on behalf of all other participants in the detection process, to the source to remove the detected peer from it's neighbor list,
 or to generally decide about peers that might be affecting the satisfaction level of non-headnodes.
 
 Through a theoretical and simulation studies, we show that our detection mechanism can fully restore users satisfaction/ experience up to ~100\%.
@@ -37,7 +37,7 @@ Simultaneously, the proposed mechanism can correctly detect malicious peers with
 The rest of the paper is organized as follows: Section~\ref{sec:related} discusses the related work and the background.
 Section~\ref{sec:system-model} provides the system model. In Section~\ref{sec:Attack}, the concepts underlying the attacker model internal attack and the conducted adversarial behaviors are defined.
 The detection mechanism is fully discussed in Section~\ref{sec:detection}, with the theoretical analysis is discussed in Section~\ref{sec:analysis}.
-The internal attack's impact, along with the detection mechanism performance and efficiency, are evaluated in Section~\ref{sec:evaluation}. Finally, we conclude our work and discuss the future work in Section~\ref{sec:conclusion}
+The internal attack's impact, along with the detection mechanism performance and efficiency, are evaluated in Section~\ref{sec:evaluation}. Finally, we conclude our work and discuss the future work in Section~\ref{sec:conclusion}.
 
  
 
