--- a/attack.tex
+++ b/attack.tex
@@ -3,7 +3,8 @@
 
 In this section, we describe the details of launching an internal attack on a streaming P2P overlay that targets intercepting video chunks from the source. 
 % We consider an attack that is not specific to a certain streaming P2P data dissemination technique, i.e., hybrid, push or pull-based.
-First, the attack's target, budget and malicious peers' placement are discussed. Afterwards, the different adversarial behaviors that can be applied by a malicious peer once a video chunk is intercepted are detailed.
+First, the attack's target, budget and malicious peers' placement are discussed.
+Afterwards, the different adversarial behaviors that can be applied by a malicious peer once a video chunk is intercepted are detailed.
 
 \subsection{Target, budget \& placement}
 
