--- a/introduction.tex
+++ b/introduction.tex
@@ -35,9 +35,9 @@ Simultaneously, the proposed mechanism can correctly detect malicious peers with
 
 \subsection*{Paper Structure}
 The rest of the paper is organized as follows: Section~\ref{sec:related} discusses the related work and the background.
-Section~\ref{sec:system-model} provides the system model. In Section~\ref{sec:Attack}, the concepts underlying the attacker model internal attack and the conducted adversarial behaviors are defined.
+In Section~\ref{sec:Attack}, the concepts underlying the attacker model internal attack and the conducted adversarial behaviors are defined.
 The detection mechanism is fully discussed in Section~\ref{sec:detection}, with the theoretical analysis is discussed in Section~\ref{sec:analysis}.
-The internal attack's impact, along with the detection mechanism performance and efficiency, are evaluated in Section~\ref{sec:evaluation}. Finally, we conclude our work and discuss the future work in Section~\ref{sec:conclusion}.
+The internal attack's impact, along with the detection mechanism performance and efficiency, are evaluated in Section~\ref{sec:eval}. Finally, we conclude our work and discuss the future work in Section~\ref{sec:conclusion}.
 
  
 
