--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@
 \input{abstract} 
 \input{introduction}
 \input{related}
-\input{system}
+% \input{system}
 \input{attack}
 \input{detection}
 \input{analysis}
